# maxgram

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  trigger.yml
car/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
car/migrations/: 0001_initial.py  0002_carconfiguration_will_arrive.py  0003_rename_cars_carconfiguration_car_and_more.py  0004_purchase.py  0005_alter_carconfigurationorder_id.py  0006_carconfigurationorder_created_at.py
comment/: admin.py  models.py  serializers.py  urls.py  views.py
comment/migrations/: 0001_initial.py
core/: settings.py  views.py
core/urls/: __init__.py  v1.py
like/: admin.py  models.py  serializers.py  urls.py  views.py
like/migrations/: 0001_initial.py
photo/: admin.py  models.py  serializers.py  urls.py  views.py
photo/migrations/: 0001_initial.py
post/: models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
user/: admin.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
